# poc

./: justfile
apps/slint-global-key/: Cargo.toml  build.rs
apps/slint-global-key/src/: main.rs
apps/slint-global-key/ui/: app.slint
