[package]
name = "slint-global-key"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.3.0" }         #, features = ["renderer-skia-vulkan"] }
i-slint-backend-selector = "=1.3.0"
flexi_logger = { version = "0.27.2" }
global-hotkey = "0.4.0"
log = "0.4.20"

[build-dependencies]
slint-build = { version = "1.3.0" }
